--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="photo-slider">
             <div class="photo-track">
                 <div class="photo-slide"><img src="spiderman.jpg" alt=""></div>
-                <div class="photo-slide"><img src="sun.jpg" alt=""></div>
-                <div class="photo-slide"><img src="mustache.jpg" alt=""></div>
+                <div class="photo-slide"><img src="wedding.jpg" alt=""></div>
+                <div class="photo-slide"><img src="walima.jpg" alt=""></div>
                 <div class="photo-slide"><img src="sun2.jpg" alt=""></div>
             </div>
         </div>
@@ -37,7 +37,7 @@
       <img src="kidsmiling.jpg" alt="" class="kidsmiling">
       <p>You're the best girlfriend someone could ever have and I'm so so so so glad I get to call you mine in front of my parents and in front of our friends. Please know that you are soooo loved by me and appreciated no matter what it is. Thank you for being by my side through thick and thin even though it's been almost 1 year you've still helped me so much and made me feel like we've been dating since we were born.</p>
       <p>Please know that if there's nobody in the world to love you I'm always here to love you and only you. I'm so happy I get to call you my girlfriend hehe.</p>
-      <img src="yummy.jpg" alt="" class="drawing">
+      <img src="eid.jpg" alt="" class="drawing">
       <p>I LOVE YOUUUUUU SO MUCH AND I MISS YOU SO MUCH. 😞 I made this special gift for you just so that you can have something hehe I learnt something new to make this by the way. AINT SHE SO CUTE AHUASHYUDAS</p>
       <p>Life comes with so many challenges but with you by my side everything seems to be possible and at ease and I love you forever for that, <mark>Happy Girlfriend Day My one and only zahraa ♥</mark></p>
       </div>
@@ -53,4 +53,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
